# FactorioLab

./: .env.example  .gitignore  FLE_docs.txt  README.md  Scraper Factorio Doc (1).py  Scraper Factorio Doc.py  factorio_doc_complete.md  pyproject.toml
.github/workflows/: ci.yml
configs/: autonomous.yaml  default.yaml  demo.yaml  fle_test.yaml  llm_test.json  production.yaml  starter.yaml  train_config.yaml  visual_demo.yaml
data/: pdf_extract.jsonl
data/knowledge/: early_game_guide.md
docs/: FACTORIO_STEAM.md  FLE_INSTALLATION.md  FLE_STATUS.md  FLE_docs.md  LIGHTER_MODELS.md  MISTRAL_7B_TRAINING.md  SETUP_LLM.md  TROUBLESHOOTING_VISUAL.md  VISUALISATION.md  WATCH_AI_LIVE.md
models/qwen-1.5b-4bit/: README.md  config.json  model.safetensors  model.safetensors.index.json  tokenizer_config.json
scripts/: bootstrap.py  bootstrap_micro.py  check_fle.py  check_fle.sh  create_manual_code_examples.py  dump_recipes.py  extract_building_blocks.py  extract_pdfs.py  extract_real_code_examples.py  factorio-ai-cli.py  inspect_fle.py  observer_mode.py  populate_recipes.py  scrape_arxiv_github.py  scrape_fle_docs.py  scrape_wiki.py  view_knowledge.py
src/factorio_ai_lab/: __init__.py  cli.py  config.py  demo_agent.py  env_adapter.py  metrics.py  mlflow_tracker.py  production_agent.py  runner.py  starter_agent.py  test_agent.py  visual_demo_agent.py
src/factorio_ai_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/factorio_ai_lab/agents/: __init__.py  autonomous_agent.py  goal_manager.py  skills.py  (+3 more)
tests/: test_smoke.py
(+3 files in other folders)
